--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"glob-all": "^3.1.0",
 		"purgecss-webpack-plugin": "^1.2.1",
 		"sass-loader": "^7.0.3",
-		"tailwindcss": "^0.7.4"
+		"tailwindcss": "^0.7.4",
+		"lodash": ">=4.17.11",
+		"extend": ">=3.0.2"
 	}
 }
